[tool.poetry]
name = "langserve-demo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]


[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "0.23.2"
langserve = {extras = ["server"], version = "0.0.30"}
traceloop-sdk = "0.25.5"
langchain = "0.2.9"  # Compatible con langchain-core 0.2.49
langchain-openai = "0.1.17"
langchain-core = "0.2.22"  # Compatible con langchain 0.2.9
langchain-community = "0.2.9" 
python-dotenv = "1.0.1"
httpx = "0.24.1"
fastapi = "0.110.0"
faiss-cpu = "1.7.4"
pydantic = ">=2.5.3"
pydantic-core = ">=2.14.6"
pypdf = "3.16.2"






[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
